--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   "imports": {
     "react": "https://esm.sh/react@18.2.0",
     "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
-    "@google/genai": "https://esm.sh/@google/genai@0.2.1"
+    "@google/generative-ai": "https://esm.sh/@google/generative-ai@0.19.0"
   }
 }
 </script>
